@@ -32,6 +32,9 @@ Current:
     device initialization failed, so the user can modify programmer
     parameters (like Vtarget).
 
+  * Add preliminary support for ATxmega128A1 for the JTAG ICE mkII using
+    JTAG.
+
 Version 5.5:
 
   * Add support for the USBtinyISP programmer (patch #6233)
